Fix alignment of links

--- a/index.css
+++ b/index.css
@@ -32,21 +32,20 @@ body {
 }
 
 body > ul {
-    display: flexbox;
     max-width: 20%;
     box-sizing: border-box;
     list-style: none;
-    margin: 2em auto;
+    margin: 1em auto;
     padding: 0%;
 }
 
 body > ul > li {
-    padding: 1em;
+    text-align: center;
+    padding-top: 2em;
     width: 100%;
 }
 
 body > ul > li > a{
-    text-align: center;
     text-decoration: none;
     font-size: 2em;
 }
@@ -61,6 +60,7 @@ body > ul > li > a > span {
 body > ul > li > a > span:hover {
     transform: scale(1.2);
 }
+
 
 body > ul > li > a > span > img {
     filter: blur(0);
